[package]
name = "roux"
version = "0.0.1"
edition = "2021"
authors = [
  "bradmartin333"
]
keywords = ["AOI", "imaging", "analysis"]
readme = "README.md"
description = "Lightwieght AOI library for C# implementation"
license = "MIT"
repository = "https://github.com/bradmartin333/roux.git"
homepage = "https://github.com/bradmartin333/roux"

[lib]
name = "roux"
crate-type = ["dylib"]

[features]

[dependencies]
glium = "0.31.0"
libc = "0.2.113"
